--- a/src/styles/EditProfile.css
+++ b/src/styles/EditProfile.css
@@ -104,3 +104,11 @@ input[type="date"].input-date-unique {
     background-color: #f2f0e4;
     color:#a67c63;
 }
+
+.input-text-sucursal-unique{
+    border-radius: 6px;
+    background: #f2ada7;
+    color: black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
