--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -560,9 +560,14 @@ a:hover {
     z-index: 999;
 }
 
+
+
 .signin-post-container {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: inline-block;
+    padding-left: 60px;
+    /* Espacio para el avatar */
+
     margin: 2% 2.5%;
     max-width: 20%;
     min-width: 20%;
@@ -576,6 +581,22 @@ a:hover {
     transition: transform 0.5s ease;
 }
 
+.avatar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 10%;
+    width: 50px;
+    /* Ancho del avatar */
+    height: 50px;
+    /* Altura del avatar */
+    border-radius: 40%;
+    /* Para hacerlo circular */
+    object-fit: cover;
+    /* Mantener la proporción y recortar si es necesario */
+    object-position: center;
+    /* Centrar la imagen dentro del contenedor */
+}
 
 .post-image {
     width: 100%;
@@ -602,24 +623,26 @@ a:hover {
     /* Escalar la imagen al 110% de su tamaño original */
 }
 
-.menuItems .profile-box {
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
+.profile-box {
+    width: 55%;
+    height: 130px;
+    /* Altura fija para la sección de la foto de perfil */
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    background-color: #cecece;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
 }
 
-.menuItems .profile-picture {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
+.profile-picture {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* La imagen cubrirá todo el contenedor sin deformarse */
+    border-radius: 50%;
+    /* Para que la imagen sea circular */
 }
+
 
 .success-message {
     background-color: #4caf50;
