--- a/src/styles/Historial.css
+++ b/src/styles/Historial.css
@@ -6,7 +6,8 @@
     height: 100vh;
     max-width: 1920px;
     max-height: 1080px;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .historial-navigation-bar {
