--- a/src/styles/EditProfile.css
+++ b/src/styles/EditProfile.css
@@ -27,6 +27,7 @@
 
 
 
+
 .inputs-form-unique {
     flex: 1;
     margin-right: 2%;
@@ -121,6 +122,20 @@ input[type="date"].input-date-unique {
 }
 
 .edit-field-btn:hover{
+    background:#734429;
+    color: #f2f0e4;
+}
+
+.cambiar-password-btn{
+    border-radius: 6px;
+    border: none;
+    background-color: #a67c63;
+    color: #f2f0e4;
+    cursor:pointer;
+    margin-bottom: 2%;
+}
+
+.cambiar-password-btn:hover{
     background:#734429;
     color: #f2f0e4;
 }
