--- a/src/styles/Support.css
+++ b/src/styles/Support.css
@@ -33,8 +33,8 @@
     width: 90%;
     padding: 8px;
     font-size: 150%;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: none;
+    border-radius: 15px;
     box-sizing: border-box;
     margin-bottom: 10px;
 }
@@ -60,6 +60,7 @@
 
 .textarea-description-support {
     height: 150px; /* Altura fija del textarea */
+    border-radius: 15px;
 }
 
 .button-submit-support {
