--- a/src/styles/HistorialSolicitudes.css
+++ b/src/styles/HistorialSolicitudes.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    overflow-x: hidden;
 }
 
 .historial-container {
