--- a/src/styles/PostDetailStyle.css
+++ b/src/styles/PostDetailStyle.css
@@ -330,12 +330,12 @@
 
 .profile-picture-detail {
     position: absolute;
-    top: 45px;
-    right: 50px;
+    top: 3%;
+    right: 8%;
     width: 78px;
     height: 78px;
     border-radius: 20%;
-    border: 2px solid #000000;
+    border: 0.1px solid #000000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     object-fit: cover;
 }
