--- a/src/styles/adminView.css
+++ b/src/styles/adminView.css
@@ -14,7 +14,7 @@
     border-radius: 20px;
     margin-right: 0%;
     width: 25%; /* Cambiado el ancho para dar espacio a ambos contenedores */
-    display: inline-block; /* Hace que los contenedores se muestren en línea */
+    display: inline-block; /* Hace que los contenedores se muestren en líneaaa */
     vertical-align: top; /* Alinea los contenedores en la parte superior */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     overflow-y: auto;
